# spreading

./: .editorconfig  README.md  pyproject.toml
