[tool.poetry]
name = "spreading"
version = "0.1.0"
description = "Distributed asyncio applications."
authors = ["Jean Jung <jean.jung@rocketmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
